# sasurahime

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HOWTO-ADD-target.ja.md  HOWTO-ADD-target.md  HOWTO-USE.ja.md  HOWTO-USE.md  LICENSE  Makefile  README.ja.md  README.md  SUPPORTED.ja.md  SUPPORTED.md  min-sized-rust.md
.github/workflows/: ci.yml
.plan/archived/: 2026-05-17-backlog-design.md  2026-05-17-pre-implementation-design.md  2026-05-17-sprint1.md  2026-05-18-sprint2.md  2026-05-19-0410-review-feature-0518b.md  2026-05-19-cocoapods-spm-cleaner.md  2026-05-19-docs-deps-housekeeping.md  2026-05-19-huggingface-cleaner.md  2026-05-19-progress-bar-tuning.md  2026-05-19-ux-i18n-accessibility.md  2026-05-20-trash-mode-design.md  2026-05-21-docs-site-navigation-design.md  2026-05-21-progress-reporter-design.md  2026-05-21-progress-reporter.md  2026-05-22-command-timeout-hint.md  2026-05-25-pbi-a-parallel-scan.md  2026-05-25-pbi-c-trash-warning-ui.md  2026-05-25-pbi-d-xcode-subcategory-selection.md  2026-05-25-pbi-e-config-toml.md  2026-05-25-pbi-f-yes-flag.md  2026-05-25-pbi-g-stats-command.md  2026-05-28-10-fix-gem-cleaner.md  (+13 more)
blog/: compact.md  full.md  mole-and-sasurahime-history.md  sasurahime-v0_2-experience.md  sasurahime-v0_2.md  v0.1.27.md
docs/: 2026-05-19-rust-binary-size-optimization.md  CHANGELOG.md  Gemfile  HOWTO-ADD-target.md  HOWTO-USE.md  SUPPORTED.md  _config.yml  coverage-gap-plan.md  coverage-gap-summary.json  index.html  index.md
pbi/: 2026-05-19-act-cleaner.md  2026-05-19-additional-cleaners-backlog.md  2026-05-19-cargo-cleaner.md  2026-05-19-clean-target-refactor.md  2026-05-19-conda-python-cleaner.md  2026-05-19-deno-cleaner.md  2026-05-19-docker-orbstack-cleaner.md  2026-05-19-gradle-jetbrains-cleaner.md  2026-05-19-pre-commit-cleaner.md  2026-05-19-rustup-cleaner.md  2026-05-19-trash-downloads.md  2026-05-20-colima-cleaner.md  2026-05-25-pbi-b-robust-error-handling.md  2026-05-25-pbi-c-trash-warning-ui.md  2026-05-25-pbi-d-xcode-subcategory-selection.md  2026-05-25-pbi-e-config-toml.md  2026-05-25-pbi-f-yes-flag.md  2026-05-25-pbi-g-stats-command.md  2026-05-28-01-fix-is-skippable-error-precision.md  2026-05-28-05-fix-structured-logging.md  2026-05-28-07-fix-cleaner-registration-refactoring.md  2026-05-28-08-fix-privacy-documentation.md  2026-05-28-09-fix-dead-code-cleanup.md  2026-06-24-01-feat-history-alias.md  AGENTS.md  PBI-001-scan-report.md  PBI-002-uv-cache.md  PBI-005-playwright-puppeteer.md  PBI-006-generic-caches.md  PBI-011-config-file.md  PBI-process.md  README.md
plans/: 2026-05-21-0000-review-docs-i18n-ui.md  2026-05-27-0637-review-pbi-2026-05-25.md  2026-05-28-0644-review-fix-2026-05-28.md  ln-634-coverage-audit.md
src/: cleaner.rs  command.rs  config.rs  context.rs  explorer.rs  format.rs  hint.rs  history.rs  interactive.rs  main.rs  progress.rs  scanner.rs  test_helpers.rs  trash.rs
tests/: act.rs  apfs_snapshot.rs  brew.rs  browser.rs  cargo.rs  config.rs  coverage.rs  device_support.rs  generic.rs  gradle.rs  history.rs  huggingface.rs  interactive.rs  library_logs.rs  log.rs  mise.rs  npm.rs  ollama.rs  pre_commit.rs  progress.rs  rustup.rs  scan.rs  trash.rs  uv.rs  xcode.rs
(+49 files in other folders)
