[package]
name = "sasurahime"
version = "0.1.5"
edition = "2021"
license = "MIT"

[[bin]]
name = "sasurahime"
path = "src/main.rs"

[dependencies]
clap        = { version = "4", features = ["derive"] }
anyhow      = "1"
walkdir     = "2"
indicatif   = "0.17"
dialoguer   = "0.11"
comfy-table = "7"
dirs        = "5"
toml        = "0.8"
serde       = { version = "1", features = ["derive"] }
wait-timeout = "0.2"
trash = "5"

[profile.release]
opt-level      = "z"      # Aggressive size optimization (s proved larger)
strip          = true     # Strip symbols
lto            = true     # Full LTO for max size reduction
codegen-units  = 1        # Single codegen unit enables more optimizations
panic          = "abort"  # Abort on panic removes unwinding code

[dev-dependencies]
assert_cmd = "2"
filetime   = "0.2"
tempfile   = "3"
