[package]
name = "sasurahime"
version = "0.1.14"
edition = "2021"
description = "macOS developer cache cleaner — scan and wipe stale caches from 40+ tools"
repository = "https://github.com/armaniacs/sasurahime"
license = "Apache-2.0"
authors = ["ARAKI Yasuhiro <iron@araki.net>"]

[[bin]]
name = "sasurahime"
path = "src/main.rs"

[dependencies]
clap        = { version = "4", features = ["derive"] }
anyhow      = "1"
walkdir     = "2"
indicatif   = "0.18"
dialoguer   = "0.12"
comfy-table = "7"
dirs        = "6"
toml        = "1.1"
serde       = { version = "1", features = ["derive"] }
wait-timeout = "0.2"
trash = "5"

[profile.release]
opt-level      = "z"      # Aggressive size optimization (s proved larger)
strip          = true     # Strip symbols
lto            = true     # Full LTO for max size reduction
codegen-units  = 1        # Single codegen unit enables more optimizations
panic          = "abort"  # Abort on panic removes unwinding code

[dev-dependencies]
assert_cmd = "2"
filetime   = "0.2"
tempfile   = "3"
