[package]
name = "sasurahime"
version = "0.1.28"
edition = "2021"
description = "macOS developer cache cleaner — scan and wipe stale caches from 40+ tools"
repository = "https://github.com/armaniacs/sasurahime"
license = "Apache-2.0"
authors = ["ARAKI Yasuhiro <iron@araki.net>"]

[[bin]]
name = "sasurahime"
path = "src/main.rs"

[dependencies]
clap        = { version = "4", features = ["derive"] }
anyhow      = "1"
walkdir     = "2"
indicatif   = "0.18"
dialoguer   = "0.12"
comfy-table = "7"
dirs        = "6"
toml        = "1.1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
chrono      = { version = "0.4", features = ["serde"] }
wait-timeout = "0.2"
trash = "5"
rayon = "1"
fs2    = "0.4"
log    = "0.4"
env_logger = "0.11"

[profile.release]
opt-level      = "z"      # Aggressive size optimization (s proved larger)
strip          = true     # Strip symbols
lto            = true     # Full LTO for max size reduction
codegen-units  = 1        # Single codegen unit enables more optimizations
panic          = "abort"  # Abort on panic removes unwinding code

[dev-dependencies]
assert_cmd = "2"
filetime   = "0.2"
tempfile   = "3"
rstest     = "0.22"
